feat: adding validations to user creation dto.